--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,18 +1,18 @@
-#name: JS Actions
-#
-#on:
-#  [push]
-#
-#jobs:
-#  action:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v1
-#      
-#      - name: hello-action
-#        uses: ./.github/actions/hello-world
-#        with:
-#          first-greeting: "learning lab user"
-#          second-greeting: "lab user 2"
-#          third-greeting: "user 3 lab"
+name: JS Actions
+
+on:
+  pull_request:
+    types: [labeled]
+
+jobs:
+  action:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: hello-action
+        uses: ./.github/actions/hello-world
+
+      - name: ha-ha
+        uses: ./.github/actions/joke-action
